<resources>
  <string name="app_name">James DSP</string>
  <string name="headset_title">Headset</string>
  <string name="speaker_title">Speaker</string>
  <string name="bluetooth_title">Bluetooth</string>
  <string name="usb_title">USB/Dock</string>
  <string name="pref_unavailable">Functionality is not available on your device</string>
  <string name="pref_dsp_title">Master switch / Output control</string>
  <string name="pref_dsp_summary_on">Master audio is enabled</string>
  <string name="pref_dsp_summary_off">Master audio is disabled</string>
  <string name="pref_dsp_enable">Master switch</string>
  <string name="dspcrashed">DSP sample rate go wrong?\nEngine crashed\nResurrecting!</string>
  <string name="dspneedreboot">Get engine PID failed</string>
  <string name="pref_compression_title">Dynamic range compander</string>
  <string name="pref_compression_summary_on">Compander is enabled</string>
  <string name="pref_compression_summary_off">Compander is disabled</string>
  <string name="pref_compression_enable">Enable Dynamic range compander</string>
  <string name="dialog_compression_timeconstant">Time constant</string>
  <string name="dialog_compression_granularity">Granularity</string>
  <string name="dialog_compression_tfresolution">Time-Frequency transforms</string>
  <string name="pref_effect_title">Select effect strength</string>
  <string name="dialog_filtertype">Filter type</string>
  <string name="dialog_spinterpolation">Interpolator</string>
  <string name="pref_equalizer_title">Multimodal Equalizer</string>
  <string name="pref_strequalizer_enable">Enable Arbitrary Magnitude Response Equalizer</string>
  <string name="pref_strphase_enable">Enable Arbitrary Phase Response Equalizer</string>
  <string name="pref_strequalizer_title">Arbitrary Response Equalizer</string>
  <string name="pref_strequalizer_summary_on">Arbitrary magnitude is enabled</string>
  <string name="pref_strequalizer_summary_off">Arbitrary magnitude is disabled</string>
  <string name="dialog_magnitude_response">Magnitude response string</string>
  <string name="pref_equalizer_summary_on">Multimodal Equalizer is enabled</string>
  <string name="pref_equalizer_summary_off">Multimodal Equalizer is disabled</string>
  <string name="pref_equalizer_enable">Enable Multimodal equalizer</string>
  <string name="pref_equalizer_preset_title">Select preset</string>
  <string name="pref_bassboost_title">Dynamic Bass boost</string>
  <string name="pref_bassboost_summary_on">Dynamic Bass boost is enabled</string>
  <string name="pref_bassboost_summary_off">Dynamic Bass boost is disabled</string>
  <string name="pref_bassboost_enable">Enable Dynamic Bass boost</string>
  <string name="dialog_dbb_maxgain">Max gain</string>
  <string name="pref_headset_virtual_title">Virtual room effect</string>
  <string name="pref_headset_virtual_summary_on">Virtual room effect is enabled</string>
  <string name="pref_headset_virtual_summary_off">Virtual room effect is disabled</string>
  <string name="pref_headset_virtual_enable">Enable Reverberation</string>
  <string name="pref_room_title">Select room type</string>
  <string name="dialog_room">Room type</string>
  <string name="pref_convolver_title">Convolver</string>
  <string name="pref_convolver_summary_on">Convolver is enabled</string>
  <string name="pref_convolver_summary_off">Convolver is disabled</string>
  <string name="pref_convolver_enable">Convolver enable</string>
  <string name="dialog_convolution_mode">Impulse response optimization</string>
  <string name="dialog_conv_advimp">Advanced waveform editing</string>
  <string name="pref_ddc_title">ViPER-DDC</string>
  <string name="pref_ddc_summary_on">ViPER-DDC is enabled</string>
  <string name="pref_ddc_summary_off">ViPER-DDC is disabled</string>
  <string name="pref_ddc_enable">Enable</string>
  <string name="dialog_sosmatrix">DDC file</string>
  <string name="text_ddc_dir_isempty">DDC directory %1$s is empty</string>
  <string name="pref_liveprog_title">Live programmable DSP</string>
  <string name="pref_liveprog_summary_on">Live programmable DSP is enabled</string>
  <string name="pref_liveprog_summary_off">Live programmable DSP is disabled</string>
  <string name="pref_liveprog_enable">Enable</string>
  <string name="dialog_liveprogfile">liveprog file</string>
  <string name="text_liveprog_dir_isempty">liveprog directory %1$s is empty</string>
  <string name="pref_analogmodelling_title">Oversampled Analog Modelling</string>
  <string name="pref_analogmodelling_summary_on">Analog Modelling is enabled</string>
  <string name="pref_analogmodelling_summary_off">Analog Modelling is disabled</string>
  <string name="pref_analogmodelling_enable">Enable Analog Modelling</string>
  <string name="dialog_tubedrive">Preamp</string>
  <string name="dialog_offlineimpulseresponseresampler">Offline Resampler</string>
  <string name="dialog_offlineimpulseresponseresampler_title">Select IR to resample</string>
  <string name="dialog_impulseresponse">Impulse response</string>
  <string name="dialog_length">Impulse response length</string>
  <string name="text_ir_dir_isempty">IR sample directory %1$s is empty</string>
  <string name="doesntexist">Error: No IR file selected</string>
  <string name="mono_conv">Mono</string>
  <string name="stereo_conv">Stereo</string>
  <string name="fullstereo_conv">Full Stereo</string>
  <string name="resamplerstr">Resampled to audio device sample rate:%1$d\nNew impulse response created at: %2$s</string>
  <string name="resamplererror">Please first register audio engine by enabling global effect or open a music player if using conventional mode in order to retrive sample rate from audio engine</string>
  <string name="impfilefault">Load impulse failed\nPlease choose right impulse response file!</string>
  <string name="unmatchedsamplerate">Impulse response %1$s sample rate (%2$d) is not matching with driver sample rate(%3$d)\nWill use low quality resampler to resample&#8230;\nUse Offline Resampler for higher qualtiy resampling!</string>
  <string name="basicinfo">Buffer len: %1$s\nAllocated block size: %2$d\nSample rate: %3$d</string>
  <string name="convolversuccess">Impulse response %1$s loaded\nChannel info:%2$s\nSamples per channel:%3$d\nSamples per channel(Truncated):%4$d</string>
  <string name="limiter_threshold">Limiter threshold [-60 &#8211; -0.1 dB]</string>
  <string name="limiter_release">Limiter release [1.5 &#8211; 500 ms]</string>
  <string name="limiter_postgain">Post gain [-15 &#8211; 15 dB]</string>
  <string name="pref_headset_soundpos_title">Sound positioning</string>
  <string name="pref_headset_stereowide_summary_on">Soundstage widthness is enabled</string>
  <string name="pref_headset_stereowide_summary_off">Soundstage widthness is disabled</string>
  <string name="pref_headset_stereowide_enable">Enable Soundstage widthness modification</string>
  <string name="dialog_stereo">Widen Level</string>
  <string name="pref_headset_bs2b_summary_on">Crossfeed is enabled</string>
  <string name="pref_headset_bs2b_summary_off">Crossfeed is disabled</string>
  <string name="dialog_bs2b">Crossfeed Preset</string>
  <string name="pref_headset_bs2b_enable">Enable Crossfeed</string>
  <string name="eq_preset_flat">Flat</string>
  <string name="eq_preset_custom">Custom</string>
  <string name="save_preset">Save preset</string>
  <string name="load_preset">Load preset</string>
  <string name="new_preset">New preset&#8230;</string>
  <string name="displaydevmsg">%1$s module info</string>
  <string name="removetext">Remove</string>
  <string name="displaytext">Display</string>
  <string name="theme">Current theme:%1$s</string>
  <string name="globaleffect_title">Reg:%1$s</string>
  <string name="darktheme">Dark</string>
  <string name="lighttheme">Light</string>
  <string name="defaulttheme">Default</string>
  <string name="redtheme">R/G Complementary</string>
  <string name="ideatheme">Idea</string>
  <string name="globalreg">Global(Require Direct volume disabled)</string>
  <string name="traditionalreg">Conventional</string>
  <string name="navigation_drawer_toggle">Toggle Drawer</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="navigation_toggle_drawer">Switch to Drawer</string>
  <string name="navigation_toggle_tabbed">Switch to Tabbed</string>
  <string name="save_error_bluetooth">"Cannot save bluetooth.xml. Have you ever open Bluetooth tab?"</string>
  <string name="save_error_headset">"Cannot save headset.xml. Have you ever open Headset tab?"</string>
  <string name="save_error_speaker">"Cannot save speaker.xml. Have you ever open Speaker tab?"</string>
  <string name="load_error_bluetooth">Load bluetooth.xml fail. File not found or permission denied</string>
  <string name="load_error_headset">Load headset.xml fail. File not found or permission denied</string>
  <string name="load_error_speaker">Load speaker.xml fail. File not found or permission denied</string>
  <string name="warn_null">File name must NOT be EMPTY, or load fail upon next preset load</string>
  <string name="help_title">Help</string>
</resources>